--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,16 @@
 kind: pipeline
 name: greeting
 
+platform:
+  os: linux
+  arch: arm64
+
 steps:
+- name: uname
+  image: alpine
+  commands:
+  - uname -a
+
 - name: en
   image: alpine
   commands:
