--- a/.drone.yml
+++ b/.drone.yml
@@ -1,5 +1,10 @@
+---
 kind: pipeline
-name: greeting
+name: hello-on-amd64
+
+platform:
+  os: linux
+  arch: amd64
 
 steps:
 - name: en
@@ -20,3 +25,62 @@ steps:
   - echo bonjour
   - echo monde
 
+---
+kind: pipeline
+name: hello-on-arm64
+
+platform:
+  os: linux
+  arch: arm64
+
+steps:
+- name: en
+  image: alpine
+  commands:
+  - echo hello
+  - echo world
+
+- name: es
+  image: alpine
+  commands:
+  - echo hola
+  - echo mundo
+
+- name: fr
+  image: alpine
+  commands:
+  - echo bonjour
+  - echo monde
+
+---
+kind: pipeline
+name: goodbye
+
+platform:
+  os: linux
+  arch: amd64
+
+steps:
+- name: en
+  image: alpine
+  commands:
+  - echo goodbye
+  - echo world
+
+- name: es
+  image: alpine
+  commands:
+  - echo adios
+  - echo mundo
+
+- name: fr
+  image: alpine
+  commands:
+  - echo au revoir
+  - echo monde
+
+depends_on:
+- hello-on-arm64
+- hello-on-amd64
+
+...
