--- a/.drone.yml
+++ b/.drone.yml
@@ -3,20 +3,7 @@ name: greeting
 
 steps:
 - name: en
-  image: alpine
+  image: bradrydzewski/private
   commands:
   - echo hello
   - echo world
-
-- name: es
-  image: alpine
-  commands:
-  - echo hola
-  - echo mundo
-
-- name: fr
-  image: alpine
-  commands:
-  - echo bonjour
-  - echo monde
-
