--- a/.drone.yml
+++ b/.drone.yml
@@ -7,6 +7,7 @@ steps:
   commands:
   - echo hello
   - echo world
+  - sleep 10
   - exit 1
 
 ---
@@ -35,7 +36,6 @@ steps:
 trigger:
   status:
   - failure
-  - success
 
 depends_on:
 - greeting
