inject into yaml

--- a/.drone.yml
+++ b/.drone.yml
@@ -4,11 +4,13 @@ name: greeting
 steps:
 - name: en
   image: alpine
+  environment:
+    PASSWORD:
+      from_secret: PASSWORD
   commands:
+  - echo $PASSWORD
   - echo hello
   - echo world
-  - echo $PASSWORD
-  - env
 
 - name: es
   image: alpine
