Playing with secrets

--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,11 @@ name: greeting
 steps:
 - name: en
   image: alpine
+  environment:
+    PASSWORD:
+      from_secret: PASSWORD
   commands:
+  - echo $PASSWORD
   - echo hello
   - echo world
 
