add custom clone step

--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,7 @@ steps:
   image: docker:git
   commands:
   - git clone https://github.com/octocat/hello-world.git
+  - cd hello-world
   - git checkout $DRONE_COMMIT
 
 - name: build
