test ssh server, fingers crossed

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,21 +1,21 @@
 kind: pipeline
-name: greeting
+type: ssh
+name: demo
+
+platform:
+  os: windows
+
+server:
+  host:
+    from_secret: windows_server
+  user:
+    from_secret: windows_username
+  password:
+    from_secret: windows_password
 
 steps:
-- name: en
-  image: alpine
+- name: test
   commands:
-  - echo hello
-  - echo world
-
-- name: es
-  image: alpine
-  commands:
-  - echo hola
-  - echo mundo
-
-- name: fr
-  image: alpine
-  commands:
-  - echo bonjour
-  - echo monde
+  - echo foo
+  - "[System.Environment]::OSVersion.Version"
+  - echo bar
