Update to test ssh plugin with when clause

--- a/.drone.yml
+++ b/.drone.yml
@@ -19,3 +19,12 @@ steps:
   - echo foo
   - "[System.Environment]::OSVersion.Version"
   - echo bar
+
+- name: test-master
+  commands:
+  - echo foo
+  - "[System.Environment]::OSVersion.Version"
+  - echo bar
+  when:
+    branch:
+    - master
