Test long running pipeline

--- a/.drone.yml
+++ b/.drone.yml
@@ -24,5 +24,4 @@ steps:
 - name: longrunning
   image: alpine
   commands:
-  - |
-    for i in {1..100}; do echo "$i minutes passed"; sleep 5; done
+  - for i in {1..100}; do echo "$i minutes passed" && sleep 60; done
