test long running

--- a/.drone.yml
+++ b/.drone.yml
@@ -24,4 +24,5 @@ steps:
 - name: longrunning
   image: alpine
   commands:
-  - for i in {1..100}; do echo "$i minutes passed" && sleep 60; done
+  - ./test.sh
+
