--- a/.drone.yml
+++ b/.drone.yml
@@ -2,14 +2,11 @@ kind: pipeline
 type: docker
 name: greeting
 
-environment:
-  GREETING_EN: hello
-
 steps:
 - name: en
   image: alpine
   commands:
-  - echo $GREETING_EN
+  - echo $PASSWORD
   - echo world
 
 - name: es
