--- a/.drone.yml
+++ b/.drone.yml
@@ -1,45 +1,17 @@
 kind: pipeline
 type: docker
-name: greeting
+name: default
+
+clone:
+  disable: true
 
 steps:
-  - name: en
+  - name: clone
     image: alpine:3.8
     commands:
-      - echo hello
-      - echo world
-      - sleep 10
-      - exit 1
+      - echo this is a clone step
 
----
-kind: pipeline
-type: docker
-name: saludo
-
-steps:
-  - name: es
+  - name: build
     image: alpine:3.8
     commands:
-      - echo hola
-      - echo mundo
-
----
-kind: pipeline
-type: docker
-name: salutation
-
-steps:
-  - name: fr
-    image: alpine:3.8
-    commands:
-      - echo bonjour
-      - echo monde
-      - echo $DRONE_BUILD_STATUS
-
-trigger:
-  status:
-  - failure
-
-depends_on:
-  - greeting
-  - saludo
+      - echo this is a build step
