--- a/.drone.yml
+++ b/.drone.yml
@@ -12,6 +12,6 @@ steps:
       - echo this is a clone step
 
   - name: build
-    image: alpine:3.8
+    image: bradrydzewski/private-test
     commands:
       - echo this is a build step
