--- a/.drone.yml
+++ b/.drone.yml
@@ -6,4 +6,5 @@ steps:
   - name: test
     image: alpine:3.8
     commands:
-      - echo ${DRONE_BRANCH//\\//-}
+      - |
+        echo ${DRONE_BRANCH//\//-}
