--- a/.drone.yml
+++ b/.drone.yml
@@ -6,5 +6,4 @@ steps:
   - name: test
     image: alpine:3.8
     commands:
-      - |
-        echo ${DRONE_BRANCH//\//-}
+      - echo ${DRONE_BRANCH///\\///-}
