--- a/.drone.yml
+++ b/.drone.yml
@@ -6,5 +6,5 @@ steps:
   - name: test
     image: alpine:3.8
     commands:
-      - echo hello
-      - echo world
+      - echo bonjour
+      - echo monde
