--- a/.drone.yml
+++ b/.drone.yml
@@ -2,6 +2,10 @@ kind: pipeline
 type: docker
 name: default
 
+platform:
+  os: linux
+  arch: arm64
+
 steps:
   - name: test_missing_secret
     image: alpine
