--- a/.drone.yml
+++ b/.drone.yml
@@ -3,10 +3,18 @@ type: docker
 name: default
 
 steps:
-  - name: build
-    image: plugins/docker
+  - name: test1
+    image: alpine
     pull: if-not-exists
-    settings:
-      repo: foo/bar
-      tags: prod
-      dry_run: true
+    commands:
+    - echo this should execute
+    when:
+      repo: bradrydzewski/hello-world
+    
+  - name: test2
+    image: alpine
+    pull: if-not-exists
+    commands:
+    - echo this should NOT execute
+    when:
+      repo: drone/hello-world
