--- a/.drone.yml
+++ b/.drone.yml
@@ -10,6 +10,18 @@ steps:
     - echo hello
     - echo world
 
+  - name: build
+    image: plugins/docker
+    settings:
+      username: foo
+      password: bar
+      repo: foo/bar
+      tags: latest
+      debug: true
+    volumes:
+    - name: temp
+      path: /tmp
+
   - name: notify
     image: plugins/slack
     pull: if-not-exists
@@ -18,3 +30,6 @@ steps:
         from_secret: slack_webhook
       channel: bradrydzewski
 
+volumes:
+- name: temp
+  temp: {}
