--- a/.drone.yml
+++ b/.drone.yml
@@ -1,30 +1,16 @@
 kind: pipeline
-type: docker
 name: default
 
 steps:
-  - name: hello
-    image: alpine
-    pull: if-not-exists
-    commands:
-    - echo hello
-    - echo world
+- name: test
+  image: mysql:8
+  commands:
+  - sleep 15
+  - mysql -u root -h database --execute="SELECT VERSION();"
 
-  - name: build
-    image: plugins/docker
-    settings:
-      repo: foo/bar
-      tags: latest
-      dry_run: true
-      debug: true
-    volumes:
-    - name: temp
-      path: /tmp
-
-  - name: notify
-    image: plugins/slack
-    pull: if-not-exists
-    settings:
-      webhook:
-        from_secret: slack_webhook
-      channel: bradrydzewski
+services:
+- name: database
+  image: mysql:8
+  environment:
+    MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+    MYSQL_DATABASE: test
