Remove notify from build file

--- a/.drone.yml
+++ b/.drone.yml
@@ -21,10 +21,10 @@ steps:
     - name: temp
       path: /tmp
 
-  - name: notify
-    image: plugins/slack
-    pull: if-not-exists
-    settings:
-      webhook:
-        from_secret: slack_webhook
-      channel: bradrydzewski
+  # - name: notify
+  #   image: plugins/slack
+  #   pull: if-not-exists
+  #   settings:
+  #     webhook:
+  #       from_secret: slack_webhook
+  #     channel: bradrydzewski
