Test Docker debug mode

--- a/.drone.yml
+++ b/.drone.yml
@@ -2,33 +2,11 @@ kind: pipeline
 type: docker
 name: default
 steps:
-  - name: hello
-    image: alpine
-    pull: if-not-exists
-    commands:
-    - echo hello
-    - echo world
+  - name: build
+    image: plugins/docker
+    settings:
+      debug: true
+      dry_run: true
+      repo: foo/bar
+      tags: latest
 
-  - name: backend
-    image: alpine
-    commands:
-    - echo backend
-    depends_on:
-      - hello
-
-  - name: frontend
-    image: node
-    commands:
-    - npm install
-    - echo frontend
-    depends_on:
-      - hello
-
-  - name: notify
-    image: alpine
-    commands:
-    - echo hello frontend backend passed
-    depends_on:
-      - hello
-      - frontend
-      - backend
