--- a/.drone.yml
+++ b/.drone.yml
@@ -1,12 +1,13 @@
 kind: pipeline
 type: docker
 name: default
+
+clone:
+  disable: true
+
 steps:
-  - name: build
-    image: plugins/docker
-    settings:
-      debug: true
-      dry_run: true
-      repo: foo/bar
-      tags: latest
+  - name: pull
+    image: alpine/git
+    commands:
+    - git clone https://github.com/drone/hello-world.git .
 
