test missing image

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,9 @@
-[]
 kind: pipeline
 type: docker
 name: default
 
 steps:
     name: test
-    image: alpine
+    x-image: alpine
     commands:
     - echo hello world
