--- a/.drone.yml
+++ b/.drone.yml
@@ -7,6 +7,8 @@ steps:
   image: alpine
   commands:
   - echo hello
+  environment:
+    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
 
 - name: test
   image: alpine
